# chiselit

./: README.md  README2.md  camera_calibration.json  camera_utils.py  contour_utils.py  contours_tests.ipynb  hello.py  hello1.py  main.py  program_generator.py  pyproject.toml  recipe_manager.py  requirements.txt  Приклад програми для KUKA.txt
docs/: SLAB Processing.md
headers/: base1.txt
recipes/: Border.json  recipes.json  wave_pattern.json
